# zkwasm-poc

./: Cargo.toml  Dockerfile  Makefile  tree.txt
pkg/: README.md  package.json  zkwasm_poc.js  zkwasm_poc_bg.wasm  zkwasm_poc_bg_opt.wasm
src/: executor.rs  lib.rs  mock.rs  types.rs
src/executor/: execute.rs  update_position.rs
src/types/: add_assets.rs  check_smaller_holdings.rs  config.rs  constants.rs  defined_types.rs  exchange.rs  funding.rs  hash.rs  limit_order.rs  objects.rs  order.rs  packed_public_key.rs  perp_error.rs  position.rs  state.rs  status.rs  trade.rs  transactions.rs  validate_state_transition.rs
