[package]
name = "zkwasm-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.17.1"
primitive-types = "0.12.1"
time = "0.3.20"
wasm-bindgen = "0.2.84"
