[package]
name = "zkwasm-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
#opt-level = 's'
